# ChangeLog for dev-perl/Sub-Uplevel
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Sub-Uplevel/ChangeLog,v 1.47 2008/03/28 09:43:51 jer Exp $

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Sub-Uplevel-0.16.ebuild:
  Stable for HPPA too.

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> Sub-Uplevel-0.16.ebuild:
  Stable on ppc64

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  Sub-Uplevel-0.16.ebuild:
  ppc. stable

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Sub-Uplevel-0.16.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> Sub-Uplevel-0.16.ebuild:
  alpha/ia64/sparc/x86 stable

*Sub-Uplevel-0.16 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +Sub-Uplevel-0.16.ebuild:
  Version bump

  21 Aug 2007; Jeroen Roovers <jer@gentoo.org> Sub-Uplevel-0.14.ebuild:
  Stable for HPPA (bug #153189).

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Sub-Uplevel-0.14.ebuild:
  ppc stable

  16 Apr 2007; Jeroen Roovers <jer@gentoo.org> Sub-Uplevel-0.14.ebuild:
  Marked ~hpppa (bug #174785).

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> Sub-Uplevel-0.14.ebuild:
  Stable on ppc64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Sub-Uplevel-0.14.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org>
  Sub-Uplevel-0.14.ebuild:
  Stable on Alpha + IA64.

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Sub-Uplevel-0.14.ebuild:
  Marking sparc stable

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -Sub-Uplevel-0.09.ebuild, -Sub-Uplevel-0.09-r1.ebuild,
  -Sub-Uplevel-0.10.ebuild, Sub-Uplevel-0.14.ebuild:
  Marking amd64 stable

  03 Dec 2006; Markus Rothe <corsair@gentoo.org> Sub-Uplevel-0.13.ebuild:
  Stable on ppc64

*Sub-Uplevel-0.14 (07 Nov 2006)

  07 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +Sub-Uplevel-0.14.ebuild:
  Version bump
